Create project section

--- a/scss/layout/navigation/_navigation.scss
+++ b/scss/layout/navigation/_navigation.scss
@@ -28,7 +28,7 @@
             padding: 1rem;
             &:hover{
                 color:white;
-                background-color: $red;
+                background-color: $blue;
             }
         }
     }
