--- a/scss/layout/introImage/_introImage.scss
+++ b/scss/layout/introImage/_introImage.scss
@@ -1,5 +1,5 @@
 .intro-image{
-    background-image: url("../../../images/house.jpg");
+    background-image: url("../images/house.jpg");
     height:39.2rem;
     background-size: cover;
     background-position: center center;
