--- a/scss/layout/navigation/_navigation.scss
+++ b/scss/layout/navigation/_navigation.scss
@@ -29,6 +29,7 @@
             &:hover{
                 color:white;
                 background-color: $blue;
+                border-radius: 1.5rem;
             }
         }
     }
