--- a/scss/styles.css
+++ b/scss/styles.css
@@ -58,6 +58,7 @@ body {
 .nav--right a:hover {
   color: white;
   background-color: #100E75;
+  border-radius: 1.5rem;
 }
 
 hr {
@@ -144,5 +145,11 @@ hr {
 .project--button a {
   text-decoration: none;
   color: #FFFFFF;
+}
+
+.project hr {
+  color: #3F3D56;
+  margin: 3.6rem 6.3rem 0;
+  height: 0.1rem;
 }
 /*# sourceMappingURL=styles.css.map */
