--- a/scss/layout/navigation/_navigation.scss
+++ b/scss/layout/navigation/_navigation.scss
@@ -5,6 +5,7 @@
         align-items: center;
         padding: 1rem 2rem;
         height: 11.2rem auto;
+        width:100%;
     }
     &--left{
         p {
