--- a/scss/styles.css
+++ b/scss/styles.css
@@ -371,6 +371,137 @@ hr {
 
 .contact i {
   height: 3rem;
-  color: blue;
+  font-size: 4rem;
+  padding-right: 3rem;
+}
+
+.contact__details {
+  margin-top: 3rem;
+}
+
+.contact__details--item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: left;
+  padding: 3rem 0;
+  line-height: 3rem;
+}
+
+.contact__details--item p {
+  font-size: 1.8rem;
+}
+
+.contact__subscribe {
+  margin-top: 3rem;
+  margin-top: 25rem;
+}
+
+.contact__subscribe input {
+  border: none;
+  width: 38rem;
+  height: 7rem;
+  border-radius: 5rem;
+  text-align: center;
+  font-size: 2rem;
+  outline: none;
+}
+
+.contact--button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contact--button button {
+  margin-top: 7.6rem;
+  background-color: #920C0C;
+  color: #FFFFFF;
+  border: none;
+  outline: none;
+  text-align: center;
+  padding: 1rem;
+  width: 18.5rem;
+  height: 3.6rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+.contact--button button:hover {
+  background-color: #100E75;
+}
+
+.contact--button a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+.contact--button button {
+  margin-top: 4rem;
+  background-color: #100E75;
+  font-size: 3rem;
+  height: 7rem;
+  border-radius: 3rem;
+}
+
+.contact--button button:hover {
+  background-color: #FFFFFF;
+  font-size: 3.5rem;
+}
+
+.contact--button button a:hover {
+  color: #920C0C;
+}
+
+.contact__connect {
+  margin-top: 4rem;
+  margin-left: 17rem;
+}
+
+.contact__connect p {
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.contact__connect div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contact__connect a {
+  text-decoration: none;
+  color: #100E75;
+}
+
+.contact__connect a:hover {
+  color: white;
+}
+
+.contact hr {
+  color: #3F3D56;
+  margin: 3.6rem 6.3rem 0;
+  padding: 0.1rem;
+}
+
+.footnote {
+  word-spacing: 1rem;
+  letter-spacing: 0.2rem;
+  margin-top: 1rem;
+  text-align: center;
 }
 /*# sourceMappingURL=styles.css.map */
