--- a/scss/layout/contact/_contact.scss
+++ b/scss/layout/contact/_contact.scss
@@ -70,20 +70,25 @@
     }
 
     @include button;
-    &--button{
-        button{
-            margin-top: 4rem;
-            background-color: $blue;
-            font-size: 3rem;
-            height: 7rem;
-            border-radius: 3rem;
-            &:hover{
-                background-color: $white;
-                font-size: 3.5rem;
-            }
-            a:hover{
-                color: $red;
-            }
+    
+
+    .button{
+        background-color: $blue;
+        color: $white;
+        border: none;
+        outline: none;
+        text-align: center;
+        padding: 1.5rem 2rem;
+        width: 18.5rem;
+        font-size: 3rem;
+        height: 7rem;
+        margin-top: 4rem;
+        border-radius: 3rem;
+        cursor: pointer;
+        &:hover{
+            background-color: $white;
+            font-size: 3.5rem;
+            color: $red;
         }
     }
 
