--- a/scss/styles.css
+++ b/scss/styles.css
@@ -445,20 +445,24 @@ hr {
   color: #FFFFFF;
 }
 
-.contact--button button {
-  margin-top: 4rem;
+.contact .button {
   background-color: #100E75;
+  color: #FFFFFF;
+  border: none;
+  outline: none;
+  text-align: center;
+  padding: 1.5rem 2rem;
+  width: 18.5rem;
   font-size: 3rem;
   height: 7rem;
+  margin-top: 4rem;
   border-radius: 3rem;
+  cursor: pointer;
 }
 
-.contact--button button:hover {
+.contact .button:hover {
   background-color: #FFFFFF;
   font-size: 3.5rem;
-}
-
-.contact--button button a:hover {
   color: #920C0C;
 }
 
