Services section completed

--- a/scss/pages/projects/styles.scss
+++ b/scss/pages/projects/styles.scss
@@ -29,6 +29,7 @@ $hrcolor: #3F3D56;
     &--content {
         font-size: 2rem;
         line-height: 2.4rem;
+        text-align: justify;
     }
 
     &--2{
