--- a/scss/pages/about/styles.css
+++ b/scss/pages/about/styles.css
@@ -1,1 +1,83 @@
-/* No CSS *//*# sourceMappingURL=styles.css.map */
+.aboutUs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.aboutUs__coreValue {
+  padding: 2rem;
+}
+
+.aboutUs__container {
+  padding: 3rem;
+}
+
+.aboutUs1 {
+  margin-bottom: 2rem;
+}
+
+.aboutUs1--title {
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+.aboutUs1--subtitle {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 2rem;
+}
+
+.aboutUs1--content {
+  line-height: 3rem;
+  text-align: justify;
+}
+
+.aboutUs__coreValue--item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.aboutUs__coreValue--item1 {
+  padding: 1rem;
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
+  margin: 3rem;
+  box-shadow: 2px 3px 5px 3px rgba(0, 0, 0, 0.62);
+  -webkit-box-shadow: 2px 3px 5px 3px rgba(0, 0, 0, 0.62);
+  -moz-box-shadow: 2px 3px 5px 3px rgba(0, 0, 0, 0.62);
+}
+
+hr {
+  margin-bottom: 2rem;
+}
+
+.img--p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+}
+
+.img--p p {
+  margin-left: 3rem;
+}
+/*# sourceMappingURL=styles.css.map */
