--- a/scss/pages/about/styles.scss
+++ b/scss/pages/about/styles.scss
@@ -1,3 +1,5 @@
+$ash: #C4C4C4;
+
 .aboutUs{
     display: flex;
     justify-content: space-between;
@@ -62,5 +64,59 @@ hr{
 
     p{
         margin-left: 3rem;
+    }
+}
+
+
+// MANAGERS FLEX -------------------------------------------
+
+.managers{
+    &__header{
+        font-size: 3rem;
+        font-weight: 700;
+        text-align: center;
+        text-transform: uppercase;
+        margin-bottom: 5rem;
+    }
+
+    &__flex{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $ash;
+        box-shadow: 2px 3px 5px 3px rgba(0,0,0,0.62);
+        -webkit-box-shadow: 2px 3px 5px 3px rgba(0,0,0,0.62);
+        -moz-box-shadow: 2px 3px 5px 3px rgba(0,0,0,0.62);
+        margin-bottom: 3rem;
+        div img{
+            width: 30rem;
+            padding:2rem;
+        }
+
+        &--details{
+            padding:2rem;
+            width:50rem;
+
+            i{
+                margin-top: 2rem;
+                font-size: 3rem;
+                color: black;
+                border: 1px solid black;
+                padding: .5rem;
+            }
+        }
+   }
+   &--name{
+        font-size: 2rem;
+        font-weight: 700;
+    }
+    &--title{
+        text-transform: uppercase;
+        margin-bottom: 3rem;
+        font-size: 1.5rem;
+    }
+
+    &--content{
+        text-align: justify;
     }
 }
